# ai-data-analyst

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b3f1c2d4e5a6_add_visualization_tables.py  c7e2f3a4b5d6_add_jobs_table.py  d1e3f4a5b6c7_add_saved_views_table.py  da909bd26a67_create_core_tables.py  e2f4a5b6c7d8_add_saved_visuals_table.py
backend/app/: dependencies.py  main.py
backend/app/api/routes/: analytics.py  auth.py  cleaning.py  datasets.py  features.py  health.py  jobs.py  profiles.py  saved_views.py  saved_visuals.py  uploads.py  visualization.py  workspaces.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  models.py
backend/app/repositories/: database.py  memory.py
backend/app/schemas/: analysis_run.py  analytics.py  analytics_context.py  cleaning.py  common.py  context_document.py  dataset.py  features.py  insights.py  job.py  profile.py  saved_view.py  saved_visual.py  source.py  uploads.py  user.py  visualization.py  workflow.py  workspace.py
backend/app/services/: analytics_context.py  analytics_orchestrator.py  analytics_planner.py  cleaning_execution_service.py  cleaning_plan_service.py  feature_service.py  profiling_service.py  saved_artifacts.py  upload_service.py  visualization_service.py
backend/app/tests/fixtures/: company_context.txt  simple_sales.csv
backend/app/tests/unit/: test_analytics_api.py  test_analytics_context.py  test_analytics_orchestrator.py  test_analytics_planner.py  test_analytics_schemas.py  test_analytics_tools.py  (+38 more)
backend/app/worker/: __main__.py  handlers.py  runner.py
(+51 files in other folders)
